pom update for java21 bump meta version no snapshot repo added proper link?
Signed-off-by: Jasper Berton <jasper.berton@team.blue>